--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -51,7 +51,7 @@ DBFile = cloudreve.db
 UnixSocket = false
 ; Database connection string, if set, other database configuration will be ignored, but Type is still required.
 ; e.g. root:123456@tcp(127.0.0.1:3306)/cloudreve?charset=utf8mb4&parseTime=True&loc=Local for MySQL.
-DatabaseURL =
+DatabaseURL =__DB_USER__:__DB_PWD__@tcp(127.0.0.1:3306)/__DB_NAME__?charset=utf8mb4&parseTime=True&loc=Local 
 
 ; Slave mode configuration
 [Slave]
