--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -32,9 +32,9 @@ Perm = 0666
 ; Database related, if you only want to use the built-in SQLite database, you can delete this section
 [Database]
 ; Database type, currently supports sqlite/mysql/postgres/mariadb, default is sqlite
-Type = postgres
+Type = mariadb
 ; Database port, default is 3306
-Port = 5432
+Port = 3306
 ; Username, default is empty
 User = __DB_USER__
 ; Password, default is empty
