--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,9 +7,9 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/cloudreve -c __INSTALL_DIR__/conf.ini -w __DATA_DIR__
-StandardOutput=append:/var/log/__APP__/__APP__.log
-StandardError=inherit
+ExecStart=__INSTALL_DIR__/cloudreve -c __INSTALL_DIR__/conf.ini
+#StandardOutput=append:/var/log/__APP__/__APP__.log
+#StandardError=inherit
 
 ### Depending on specificities of your service/app, you may need to tweak these
 ### .. but this should be a good baseline
