--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -25,33 +25,9 @@ KeyPath =
 ; Enable Unix Socket listening
 [UnixSocket]
 ; Unix Socket listening path, default is empty
-Listen = /run/cloudreve/cloudreve.sock
+;Listen = /run/cloudreve/cloudreve.sock
 ; Set permissions for the generated socket file, default is empty
-Perm = 0666
-
-; Database related, if you only want to use the built-in SQLite database, you can delete this section
-[Database]
-; Database type, currently supports sqlite/mysql/postgres/mariadb, default is sqlite
-Type = mariadb
-; Database port, default is 3306
-Port = 3306
-; Username, default is empty
-User = __DB_USER__
-; Password, default is empty
-Password = `__DB_PWD__
-; Database address, default is empty
-Host = 127.0.0.1
-; Database name, default is empty
-Name = __DB_NAME__
-; Connection character set, default is utf8mb4
-Charset = utf8mb4
-; SQLite database file path, default is data/cloudreve.db
-DBFile = cloudreve.db
-; Connect to the database using Unix Socket, default is false. If enabled, please specify the Unix Socket path in Host
-UnixSocket = false
-; Database connection string, if set, other database configuration will be ignored, but Type is still required.
-; e.g. root:123456@tcp(127.0.0.1:3306)/cloudreve?charset=utf8mb4&parseTime=True&loc=Local for MySQL.
-DatabaseURL =__DB_USER__:__DB_PWD__@tcp(127.0.0.1:3306)/__DB_NAME__?charset=utf8mb4&parseTime=True&loc=Local 
+;Perm = 0666
 
 ; Slave mode configuration
 [Slave]
