--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -7,7 +7,7 @@ Listen = :__PORT__
 Debug = false
 ; Header used to present client IP, default is empty. If this header contains multiple IPs separated by `,`, Cloudreve will use the first one as the client IP
 ; For deployments behind a reverse proxy, the value can be set to X-Forwarded-For. However, please note that due to potential XFF injection issues, it should only be used when it is confirmed to be trustworthy
-ProxyHeader =
+ProxyHeader = X-Forwarded-For
 ; Maximum buffer time for safe process exit, default is 0, no limit
 GracePeriod = 0
 ; Log level, available values are debug/info/warning/error, default is info
@@ -32,7 +32,7 @@ KeyPath =
 ; Slave mode configuration
 [Slave]
 ; Communication secret key, default is empty
-Secret =
+Secret = __KEY__
 ; Callback request timeout (s), default is 20
 CallbackTimeout = 20
 ; Signature validity period (s), default is 600
