--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,68 +1,16 @@
 [System]
-; Running mode, available values are master/slave
 Mode = master
-; HTTP listening port, default is 5212
 Listen = :__PORT__
-; Whether to enable Debug mode, default is false
-Debug = false
-; Header used to present client IP, default is empty. If this header contains multiple IPs separated by `,`, Cloudreve will use the first one as the client IP
-; For deployments behind a reverse proxy, the value can be set to X-Forwarded-For. However, please note that due to potential XFF injection issues, it should only be used when it is confirmed to be trustworthy
-ProxyHeader = X-Forwarded-For
-; Maximum buffer time for safe process exit, default is 0, no limit
-GracePeriod = 0
-; Log level, available values are debug/info/warning/error, default is info
-LogLevel = info
 
-; SSL related
-[SSL]
-; SSL listening port, default is 443
-Listen = :443
-; Certificate path, default is empty
-CertPath =
-; Private key path, default is empty
-KeyPath =
+[Database]
+Type = mysql
+Port = 3306
+User = __DB_USER__
+Password = __DB_PWD__
+Host = 127.0.0.1
+Name = __DB_NAME__
 
-; Enable Unix Socket listening
-[UnixSocket]
-; Unix Socket listening path, default is empty
-;Listen = /run/cloudreve/cloudreve.sock
-; Set permissions for the generated socket file, default is empty
-;Perm = 0666
-
-; Slave mode configuration
-[Slave]
-; Communication secret key, default is empty
-Secret = __KEY__
-; Callback request timeout (s), default is 20
-CallbackTimeout = 20
-; Signature validity period (s), default is 600
-SignatureTTL = 600
-
-; CORS configuration
-[CORS]
-AllowOrigins = *
-AllowMethods = OPTIONS,GET,POST
-AllowHeaders = *
-AllowCredentials = false
-
-; Redis related
 [Redis]
-; Connection type, default is tcp
-Network = tcp
-; Server address, default is empty, not enabled
 Server = 127.0.0.1:6379
-; Password, default is empty
 Password =
-; Database, default is 0
 DB = 0
-; Username, default is empty
-User =
-; Use TLS to connect to Redis, default is false
-UseTLS = false
-; Skip TLS verification, default is false
-TLSSkipVerify = false
-
-; Slave configuration application override
-[OptionOverwrite]
-; Directly use the `setting name = value` format to override
-queue_slave_worker_num = 50
