--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,19 +1,12 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
 location __PATH__/ {
 
-  proxy_pass         http://127.0.0.1:__PORT__/;
-  proxy_set_header   Host $host;
-  proxy_pass_header  Server;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host; # Important, the Host header must be presented for some Cloudreve features to work properly.
+    proxy_redirect off;
+    proxy_pass http://127.0.0.1:__PORT__; # Please replace this line with the actual address of your Cloudreve instance.
 
-  proxy_buffering    off;
-  proxy_set_header   X-Real-IP $remote_addr;
-  proxy_set_header   X-Forwarded-For $remote_addr;
-  proxy_set_header   X-Forwarded-Proto $scheme;
-  proxy_http_version 1.1;
-
-  proxy_set_header   Upgrade $http_upgrade;
-  proxy_set_header   Connection $connection_upgrade;
-
-  # setup for image upload
-  client_max_body_size 256M;
+    # Set maximum file upload size, uncomment if needed.
+    # Theoretically, the chunk size of the local storage policy, the maximum upload size of WebDAV, and the maximum upload size of the transfer service should not exceed the setting here.
+    # client_max_body_size 20000m;
 }
